force-app/main/default/objects/Check_Request__c/Check_Request__c.object-meta.xml
<CustomObject>
    <label>Check Request</label>
    <nameField>
        <displayFormat>Request-{000000}</displayFormat>
        <label>Check Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Check Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>