force-app/main/default/objects/Check_Request__c/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Check Requests</relationshipLabel>
    <relationshipName>Check_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>