force-app/main/default/objects/Check_Request__c/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <inlineHelpText>Rollup of Monthly Unit Totals</inlineHelpText>
    <label>Total</label>
    <summarizedField>Monthly_Unit__c.Total__c</summarizedField>
    <summaryForeignKey>Monthly_Unit__c.Check_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>